--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "keymirror": "^0.1.1",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
+    "react-native-button": "^2.1.0",
     "react-native-navigator-router": "^0.2.1",
+    "react-navigation": "^1.0.0-beta.13",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-native": "^4.2.0",
